# esp32-weather-station

./: Cargo.toml  README.md  diagram.json  sdkconfig.defaults  wokwi.toml
.cargo/: config.toml
assets/: Sprite-0001.aseprite  Sprite-0001.tga
example/: firmware_v1.rs  firmware_v2.rs  test_screen.rs
src/: main.rs
