[package]
name = "esp32-weather-station"
version = "0.1.0"
authors = ["troxid <troksid@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp32-weather-station"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }

embedded-graphics = "0.8.1"
embedded-layout = "0.4.1"
ssd1306 = "0.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
tinytga = "0.5.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
embedded-svc = "0.28.0"
anyhow = "1.0.82"



[build-dependencies]
embuild = "0.32.0"

[[example]]  
name = "test_screen"  
path = "example/test_screen.rs"

[[example]]  
name = "test_tearing"  
path = "example/test_tearing.rs"

[[example]]  
name = "firmware_v1"  
path = "example/firmware_v1.rs"

[[example]]  
name = "firmware_v2"  
path = "example/firmware_v2.rs"